cfn_benchmark/cfn_templates/govuk-one-login__ipv-cri-common-infrastructure/frontend/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Cloudformation teamplate for creating address frontend in fargate"

Parameters:
  VPC:
    Description: VPC ID for the services
    Type: String
  PublicSubnet1:
    Description: Subnet 1 for ALB
    Type: String
  PublicSubnet2:
    Description: Subnet 2 for ALB
    Type: String
  ECRrepo:
    Type: String
    Description: "Enter the name of the ECR image and tag. Eg For the repo 123.dkr.ecr.eu-west-2.amazonaws.com/test:1 enter test:1"

Resources:

################ Role
  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: ''
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
################ Task definition
  AddressTaskDefintion:
    Type: AWS::ECS::TaskDefinition
    Properties:
      RequiresCompatibilities:
        - "FARGATE"
      ExecutionRoleArn: !GetAtt
        - ECSTaskExecutionRole
        - Arn
      Cpu: 256
      Memory: 512
      NetworkMode: "awsvpc"
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-Address-frontend
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRrepo}"
          MemoryReservation: 256
          Memory: 512
          PortMappings:
            - ContainerPort: 5010
              Protocol: tcp
################ Cluster
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub ${AWS::StackName}-address-cluster
################  Application Load balancer.
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: AddressCriFrontALB
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Type: application
      SecurityGroups:
        -  !GetAtt FargateAlbSG.GroupId
################ Target Group
  AddressTargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${AWS::StackName}-tg
      VpcId: !Ref VPC
      Protocol: HTTP
      Port: 5010
      HealthCheckPath: /
      Matcher:
        HttpCode: "200-399"
      TargetType: ip
################ Listener
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AddressTargetGroup1
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
################ Load balancer Security group
  FargateAlbSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG for the Fargate ALB
      GroupName: !Sub ${AWS::StackName}-ALB-Security-group
      SecurityGroupIngress:
        - CidrIpv6: ::/0
          FromPort: 80
          ToPort: 80
          IpProtocol: TCP
          Description: 'Inbound rule for IPv6 traffic'
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: TCP
          Description: 'Inbound rule for IPv4 traffic'
      VpcId: !Ref VPC
################ Container Security group
  FargateContainerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: SG for the Fargate containers
      GroupName: !Sub ${AWS::StackName}-Container-Security-group
      SecurityGroupIngress:
        - IpProtocol: -1
          SourceSecurityGroupId: !GetAtt FargateAlbSG.GroupId
          Description: Inbound rule for all traffic
############### Service
  Service:
    Type: AWS::ECS::Service
    DependsOn: ALB
    Properties:
      ServiceName: !Sub ${AWS::StackName}-Address-frontend
      LaunchType: FARGATE
      Cluster:
        Ref: Cluster
      DesiredCount: 1
      TaskDefinition:
        Ref: AddressTaskDefintion
      DeploymentConfiguration:
        MaximumPercent: 150
        MinimumHealthyPercent: 50
      DeploymentController:
        Type: ECS
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !GetAtt FargateContainerSG.GroupId
          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2
      LoadBalancers:
        - TargetGroupArn:
            Ref: AddressTargetGroup1
          ContainerPort: 5010
          ContainerName: !Sub ${AWS::StackName}-Address-frontend

Outputs:
  Service:
    Description: A reference to the service created
    Value: !Ref Service

  TaskDefinition:
    Description: The task definition
    Value: !Ref AddressTaskDefintion

  Cluster:
    Description: The cluster created
    Value: !Ref Cluster

  DNSName:
    Description: The url of the created service
    Value: !GetAtt ALB.DNSName
